--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -9,10 +9,46 @@
             <div class="dropdown">
                 <div class="link-container">
                     <a class="dropbtn">PRODUCTS</a>
-                        <div class="dropdown-content">
-                            <a href="#">Link 1</a>
-                            <a href="#">Link 2</a>
-                            <a href="#">Link 3</a>
+                        <div class="dropdown-content ">
+                            <div class="dropdown-container d-flex justify-content-center">
+                                <div class="cont-test d-flex justify-content-center">
+                                    <div class="products-cont">
+                                        <h3>PRODUCTS</h3>
+                                        <ul>
+                                            <li>Smartwatches</li>
+                                            <li>Trackers</li>
+                                            <li>Premium</li>
+                                            <li>Accessories</li>
+                                            <li>Scales</li>
+                                            <li>What's New</li>
+                                            <li>Designers Collection</li>
+                                            <li>Shop All Products</li>
+                                        </ul>
+                                    </div>
+                                    <div class="experience-cont">
+                                        <h3>EXPERIENCES</h3>
+                                        <ul>
+                                            <li>Setup Process</li>
+                                            <li>Take the Quiz</li>
+                                            <li>Compare Products</li>
+                                        </ul>
+                                    </div>
+                                
+                                    <div class="drop-hero">
+                                        <p></p>
+                                        <img src="assets/homepage-product-nav-googlepixel-fall22.jpg" alt="sedf">
+                                    </div>
+                                    <div class="drop-hero">
+                                        <p></p>
+                                        <img src="assets/homepage-product-nav-sense2-fall22.jpg" alt="">
+                                    </div>
+                                    <div class="drop-hero">
+                                        <p></p>
+                                        <img src="assets/homepage-product-nav-inspire3-fall22.jpg" alt="">
+                                    </div>
+                                </div>
+                                
+                            </div>
                         </div>
                 </div>
             </div>
